test_suite/tests/ui/remote/nonremote_getter.stderr
error: #[serde(getter = "...")] can only be used in structs that have #[serde(remote = "...")]
 --> tests/ui/remote/nonremote_getter.rs:4:1
  |
3 |   #[derive(Serialize)]
  |            --------- in this derive macro expansion
4 | / struct S {
5 | |     #[serde(getter = "S::get")]
6 | |     a: u8,
7 | | }
  | |_^
  |
  = note: this error originates in the derive macro `Serialize` (in Nightly builds, run with -Z macro-backtrace for more info)
